
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


struct soc_mixer_control {unsigned int reg; unsigned int rreg; unsigned int shift; unsigned int max; } ;
struct snd_kcontrol {scalar_t__ private_value; } ;
struct TYPE_3__ {unsigned int* value; } ;
struct TYPE_4__ {TYPE_1__ integer; } ;
struct snd_ctl_elem_value {TYPE_2__ value; } ;


 unsigned int* max9877_regs ;

__attribute__((used)) static int max9877_get_2reg(struct snd_kcontrol *kcontrol,
  struct snd_ctl_elem_value *ucontrol)
{
 struct soc_mixer_control *mc =
  (struct soc_mixer_control *)kcontrol->private_value;
 unsigned int reg = mc->reg;
 unsigned int reg2 = mc->rreg;
 unsigned int shift = mc->shift;
 unsigned int mask = mc->max;

 ucontrol->value.integer.value[0] = (max9877_regs[reg] >> shift) & mask;
 ucontrol->value.integer.value[1] = (max9877_regs[reg2] >> shift) & mask;

 return 0;
}
